# nerf-frenemy

./: README.md  pyproject.toml
frenemy/: frenemy_config.py  frenemy_model.py  posecnn_dataset.py  posecnn_segmentation_dataset.py  propspose_dataparser.py  propspose_segmentation_dataparser.py
frenemy/PoseCNN/: p4_helper.py  pose_cnn.py
frenemy/PoseCNN/rob599/: PROPSPoseDataset.py  grad.py
frenemy/task_models/: base_task.py  fasterrcnn_task.py  posecnn_segmentation_task.py  posecnn_task.py
utils/: dataset_modifier.py  metrics_over_ablation.py  nerfrenemy_batch.py  original_rotation_loss.csv  original_segmentation_loss.csv  original_translation_loss.csv  plot_avg_training.py  regularization_loss.csv  rename_images.py  resize_images.py  rgb_loss.csv  roboflow_to_props.py  rotation_loss.csv  run_batch.py  segmentation_loss.csv  translation_loss.csv
