[project]
name = "nerfrenemy"
description = "Template repository for creating and registering new methods in nerfstudio."
version = "0.1.0"

dependencies = ["nerfstudio >= 0.3.0"] 

[tool.setuptools.packages.find]
include = ["frenemy*"]

# register the entry point of your new method here:
[project.entry-points.'nerfstudio.method_configs']
frenemy = 'frenemy.frenemy_config:frenemy_method'
# nerfacto2 = 'frenemy.frenemy_config:nerfacto2'
